examples/datalog/15_arithmetic/16_division_edge_cases.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_division
Knowledge graph 'test_division' created.
Switched to knowledge graph: test_division
> .kg use test_division
Switched to knowledge graph: test_division
> +div_data[(10, 2), (20, 4), (15, 3), (100, 0), (50, 0)].
Inserted 5 fact(s) into 'div_data'.
> +safe_div(X, Y, X/Y) :- div_data(X, Y), Y != 0.
Script error: Parse error: Invalid term: 'X/Y'
